--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "jms/metadata": "~1.1",
         "jms/parser-lib": "1.*",
         "phpcollection/phpcollection": "~0.1",
-        "doctrine/annotations": "1.*"
+        "doctrine/annotations": "1.*",
+        "doctrine/instantiator": "~1.0.3"
     },
     "suggest": {
         "symfony/yaml": "Required if you'd like to serialize data to YAML format."
@@ -37,6 +38,12 @@
     "autoload": {
         "psr-0": {
             "JMS\\Serializer": "src/"
+        }
+    },
+    "config": {
+        "bin-dir": "bin",
+        "platform": {
+            "php": "5.3.2"
         }
     },
     "extra": {
